<resources>
    <string name="app_name">Netflix</string>
    <string name="login_image">https://variety.com/wp-content/uploads/2020/05/netflix-logo.png?w=1000&amp;h=563&amp;crop=1&amp;resize=1000%2C563</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_label_4">Profile</string>
    <string name="text_label_3">Favorites</string>
    <string name="text_label_1">Home</string>
    <string name="text_label_2">Search</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="network_error">Please check the internet connectivity</string>
    <string name="data">Data</string>
    <string name="watch_now_image_description">Show the watch now image</string>
    <string name="each_movie">Data</string>
    <string name="movie_image">Movie Image</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="facebook">Facebook</string>
    <string name="sign_up">Sign Up</string>
    <string name="google">Google</string>
    <string name="twitter">Twitter</string>
</resources>