<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.example.netflix.ui.auth.LoginVM" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/black"
            tools:context=".ui.auth.LoginActivity">


            <ImageView
                android:id="@+id/logo"
                android:layout_width="match_parent"
                android:layout_height="175dp"
                android:src="@drawable/app_logo"
                android:contentDescription="@string/movie_image"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.65" />

            <LinearLayout
                android:id="@+id/login_details"
                android:layout_width="match_parent"
                android:layout_height="380dp"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/logo">


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/username"
                    style="@style/Widget.App.TextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:hint="@string/username">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/profile_selector"
                        android:drawablePadding="15dp"
                        android:imeOptions="actionNext"
                        android:text="@={viewModel.username}"
                        android:textColor="@color/white"
                        android:textCursorDrawable="@color/white"
                        tools:ignore="VisualLintTextFieldSize" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/password"
                    style="@style/Widget.App.TextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:hint="@string/password">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/password_selector"
                        android:drawablePadding="15dp"
                        android:imeOptions="actionNext"
                        android:inputType="textPassword"
                        android:text="@={viewModel.password}"
                        android:textColor="@color/white"
                        android:textColorHint="@color/white"
                        android:textCursorDrawable="@color/white"
                        tools:ignore="VisualLintTextFieldSize" />

                </com.google.android.material.textfield.TextInputLayout>


                <TextView
                    android:id="@+id/login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="18dp"
                    android:text="@string/forgot_password"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/login_submit"
                    android:layout_width="370dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="30dp"
                    android:backgroundTint="@color/red"
                    android:onClick="@{viewModel::onLogin}"
                    android:padding="15dp"
                    android:text="@string/login" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/signup_question"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/login_details"
                app:layout_constraintVertical_bias="0.04000002">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/don_t_have_an_account"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/signup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_up"
                    android:textColor="@color/white"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/signup_question">

                <ImageView
                    android:id="@+id/facebook"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:scaleType="fitCenter"
                    android:contentDescription="@string/facebook"
                    android:src="@drawable/facebook_icon" />

                <ImageView
                    android:id="@+id/google"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:onClick="onSignIn"
                    android:scaleType="fitCenter"
                    android:contentDescription="@string/google"
                    android:src="@drawable/google_icon"
                    tools:ignore="UsingOnClickInXml" />


                <ImageView
                    android:id="@+id/twitter"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:scaleType="fitCenter"
                    android:contentDescription="@string/twitter"
                    android:src="@drawable/twitter_icon" />
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>